Added description columb to products

--- a/store/app/views/home/index.html.erb
+++ b/store/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1>---Welcome---</h1>
 
 <%# figure out how to allign row-fluid for 4 items across each row %>
-<div class='row'>
+<div class='row-fluid'>
     <% @products.each do |product| %>
       <div class='span3 well'>
         <p><%= product.name %></p>
