--- a/store/app/views/layouts/application.html.erb
+++ b/store/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <ul class="nav">
               <li><%= link_to "Browse Products", products_path %></li>
               <li><%= link_to "Price List" %></li>
-              <li><%= link_to "Contact Us" %></li>
+              <li><%= link_to "Contact Us", contacts_path %></li>
               <li><%= link_to "Cart" %></li>
             </ul>
           </div>
@@ -34,7 +34,7 @@
 
     <div class="container">
       <%= yield %>
-    </div>
+    </div> <!-- close container -->
   </body>
 </html>
 
