--- a/store/app/views/products/_form.html.erb
+++ b/store/app/views/products/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :description, :class => 'text_area' %>
+      <%= f.text_area :description, :rows => "3",  :class => 'text_area' %>
     </div>
   </div>
   <div class="form-actions">
