Separated browse products and products admin page

--- a/store/app/views/layouts/application.html.erb
+++ b/store/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
           <a class="brand" href="/">Cumberland Commerce</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Browse Products", products_path %></li>
+              <li><%= link_to "Browse Products", b_products_path %></li>
+              <li><%= link_to "Browse Products (Admin)", products_path %></li>
               <li><%= link_to "Price List" %></li>
               <li><%= link_to "Contact Us", contacts_path %></li>
               <li><%= link_to "Cart" %></li>
