--- a/store/app/views/b_products/index.html.erb
+++ b/store/app/views/b_products/index.html.erb
@@ -1,7 +1,4 @@
 <h1>Browse Products</h1>
-
-
-
 <div class="row">
   <div class="span3">
     <ul class="nav nav-list">
@@ -21,10 +18,14 @@
       <% @products.each_slice(10) do |slice| %>
         <% slice.each do |product| %>
            <table class="table">
-            <tr>
+             <tr>
+              <td width="25%">PICTURE</td>
               <td width="30%">
-                <p><%= product.name %></p>
+                <h4><%= product.name %></h4>
                 <p>$<%= product.price %></p>
+                <% if product.instock != true %>
+                  <p>Out of stock</p>
+                <% end %>
               </td>
               <td>Description: <%= product.description %></td>
             </tr>
