--- a/store/app/views/products/show.html.erb
+++ b/store/app/views/products/show.html.erb
@@ -8,6 +8,8 @@
   <dd><%= @product.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
   <dd><%= @product.price %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:instock) %>:</strong></dt>
+  <dd><%= @product.instock %></dd>
 </dl>
 
 <div class="form-actions">
