Added placeholder for category on b_products

--- a/store/app/views/b_products/index.html.erb
+++ b/store/app/views/b_products/index.html.erb
@@ -27,7 +27,10 @@
                   <p>Out of stock</p>
                 <% end %>
               </td>
-              <td>Description: <%= product.description %></td>
+              <td>
+                Category: LOVE NOVEL<br \>
+                Description: <%= product.description %>
+              </td>
             </tr>
           </table>
         <% end %>
