--- a/store/app/views/layouts/application.html.erb
+++ b/store/app/views/layouts/application.html.erb
@@ -23,9 +23,8 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li><%= link_to "Browse Products", b_products_path %></li>
-              <li><%= link_to "Browse Products (Admin)", products_path %></li>
+              <li><%= link_to "Products (Admin)", products_path %></li>
               <li><%= link_to "Categories (Admin)", categories_path %></li>
-              <li><%= link_to "Price List" %></li>
               <li><%= link_to "Contact Us", contacts_path %></li>
               <li><%= link_to "Cart" %></li>
             </ul>
