--- a/store/app/views/admins/index.html.erb
+++ b/store/app/views/admins/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Admin</h1>
 
-<p><%= link_to "Products (Admin)", products_path %></p>
-<p><%= link_to "Categories (Admin)", categories_path %></p>
+<p><%= link_to "Products", products_path %></p>
+<p><%= link_to "Categories", categories_path %></p>
+<p><%= link_to "Customers", customers_path %></p>
