Added addresses table, and scaffold

--- a/store/app/views/admins/index.html.erb
+++ b/store/app/views/admins/index.html.erb
@@ -3,3 +3,4 @@
 <p><%= link_to "Products", products_path %></p>
 <p><%= link_to "Categories", categories_path %></p>
 <p><%= link_to "Customers", customers_path %></p>
+<p><%= link_to "Addresses", addresses_path %></p>
