--- a/store/app/views/customers/_form.html.erb
+++ b/store/app/views/customers/_form.html.erb
@@ -30,15 +30,14 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :address_id, :class => 'control-label' %>
+    <%= f.label :address, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :address_id, :class => 'number_field' %>
+      <%= f.collection_select :address_id, Address.all, :id, :line1, {} %>
     </div>
   </div>
-
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                customers_path, :class => 'btn' %>
-  </div>
-<% end %>
+      customers_path, :class => 'btn' %>
+    </div>
+  <% end %>
