--- a/store/app/views/b_products/index.html.erb
+++ b/store/app/views/b_products/index.html.erb
@@ -3,9 +3,9 @@
   <div class="span3">
     <ul class="nav nav-list">
       <li class="nav-header">Categories</li>
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Library</a></li>
-      ...
+      <% Category.all.each do |category| %>
+        <li><%= category.name %></li>
+      <% end %>
     </ul>
   </div>
 
@@ -14,50 +14,50 @@
     <div class="row">
       <div class="span9">
 
-      <%-# display 10 products per section -%>
-      <% @products.each_slice(10) do |slice| %>
-        <% slice.each do |product| %>
-           <table class="table">
-             <tr>
-              <td width="25%">PICTURE</td>
-              <td width="30%">
-                <h4><%= product.name %></h4>
-                <p>$<%= product.price %></p>
-                <% if product.instock != true %>
-                  <p>Out of stock</p>
-                <% end %>
-              </td>
-              <td>
-                Category: <%= Category.find_by_id(product.category_id).name =%><br \>
-                Description: <%= product.description %>
-              </td>
-            </tr>
-          </table>
+        <%-# display 10 products per section -%>
+        <% @products.each_slice(10) do |slice| %>
+          <% slice.each do |product| %>
+            <table class="table">
+              <tr>
+                <td width="25%">PICTURE</td>
+                <td width="30%">
+                  <h4><%= product.name %></h4>
+                  <p>$<%= product.price %></p>
+                  <% if product.instock != true %>
+                    <p>Out of stock</p>
+                  <% end %>
+                </td>
+                <td>
+                  Category: <%= Category.find_by_id(product.category_id).name =%><br \>
+                  Description: <%= product.description %>
+                </td>
+              </tr>
+            </table>
+          <% end %>
         <% end %>
-      <% end %>
 
-      <!--<p>cat test</p>-->
-      <%#<% @categories.each do |category| %>
-        <%#<p><%= category.name %><!--</p>-->
-      <%#<% end %>
+        <!--<p>cat test</p>-->
+        <%#<% @categories.each do |category| %>
+          <%#<p><%= category.name %><!--</p>-->
+          <%#<% end %>
 
-      <div class="pagination">
-        <ul>
-          <li><a href="#">Prev</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
-          <li><a href="#">Next</a></li>
-        </ul>
+        <div class="pagination">
+          <ul>
+            <li><a href="#">Prev</a></li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li><a href="#">Next</a></li>
+          </ul>
+        </div>
+
+
+        <!--span2-->
       </div>
 
 
-      <!--span2-->
     </div>
-
-
   </div>
-</div>
 </div>
