--- a/store/app/views/home/index.html.erb
+++ b/store/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <div class="hero-unit">
+  <%= image_tag("logo.png", :size => "250x250", :alt => "C.C. Logo", :class => 'logo-right') %>
   <h1>Welcome</h1>
   <p class="lead">C.C. offers yadayada yada and welcomes you to our site.  Buy something!</p>
 </div>
@@ -16,28 +17,28 @@
   <div class="span9">
 
 
-<%# figure out how to allign row-fluid for 4 items across each row %>
-<div class='row'>
-    <% @products.each do |product| %>
-      <div class='span2 well'>
-        <p><%= product.name %></p>
-        <p>$<%= product.price %></p>
-      </div>
-    <% end %>
+    <%# figure out how to allign row-fluid for 4 items across each row %>
+    <div class='row'>
+      <% @products[0..5].each_slice(3) do |slice| %>
+        <% slice.each do |product| %>
+          <div class='span2 well'>
+            <p><%= product.name %></p>
+            <p>$<%= product.price %></p>
+          </div>
+        <% end %>
+      <% end %>
 
-
-
-    <div class="pagination">
-      <ul>
-        <li><a href="#">Prev</a></li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">Next</a></li>
-      </ul>
-    </div>
+      <!--<div class="pagination">
+        <ul>
+          <li><a href="#">Prev</a></li>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#">Next</a></li>
+        </ul>
+      </div>-->
 
     </div>
   </div>
