Cleaned up b_products

--- a/store/app/views/b_products/index.html.erb
+++ b/store/app/views/b_products/index.html.erb
@@ -1,13 +1,24 @@
 <h1>Browse Products</h1>
 <div class="row">
   <div class="span3">
-    <ul class="nav nav-list">
-      <li class="nav-header">Categories</li>
-      <% Category.all.each do |category| %>
-        <li><%= category.name %></li>
-      <% end %>
-    </ul>
+    <div class="well" style="max-width: 340px; padding: 8px 0;">
+      <ul class="nav nav-list">
+        <li class="nav-header">Categories</li>
+        <% Category.all.each do |category| %>
+          <li><a href="#"><%= category.name %></a></li>
+        <% end %>
+      </ul>
+    </div>
+  
+    <form class="form-search">
+      <div class="input-append">
+        <input type="text" class="span2 search-query">
+        <button type="submit" class="btn">Search</button>
+      </div>
+    </form> 
+
   </div>
+
 
   <div class="span9">
 
@@ -15,10 +26,15 @@
       <div class="span9">
 
         <%-# display 10 products per section -%>
-        <% @products.each_slice(10) do |slice| %>
-          <% slice.each do |product| %>
-            <table class="table">
+        <table class="table">
+          <% @products.each_slice(10) do |slice| %>
+            <% slice.each do |product| %>
               <tr>
+                <td width="">
+                  <label class="checkbox">
+                    <input type="checkbox" />
+                  </label>
+                </td>
                 <td width="25%">PICTURE</td>
                 <td width="30%">
                   <h4><%= product.name %></h4>
@@ -32,32 +48,33 @@
                   Description: <%= product.description %>
                 </td>
               </tr>
-            </table>
+            <% end %>
           <% end %>
-        <% end %>
+        </tbody>
+      </table>
 
-        <!--<p>cat test</p>-->
-        <%#<% @categories.each do |category| %>
-          <%#<p><%= category.name %><!--</p>-->
-          <%#<% end %>
+      <!--<p>cat test</p>-->
+      <%#<% @categories.each do |category| %>
+        <%#<p><%= category.name %><!--</p>-->
+        <%#<% end %>
 
-        <div class="pagination">
-          <ul>
-            <li><a href="#">Prev</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">Next</a></li>
-          </ul>
-        </div>
-
-
-        <!--span2-->
+      <div class="pagination">
+        <ul>
+          <li><a href="#">Prev</a></li>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#">Next</a></li>
+        </ul>
       </div>
 
 
+      <!--span2-->
     </div>
+
+
   </div>
+</div>
 </div>
