--- a/store/app/views/home/index.html.erb
+++ b/store/app/views/home/index.html.erb
@@ -6,16 +6,17 @@
 
 <div class="row">
   <div class="span3">
-    <ul class="nav nav-list">
-      <li class="nav-header">Categories</li>
-      <% Category.all.each do |category| %>
-        <li><%= category.name %></li>
-      <% end %>
-    </ul>
+    <div class="well" style="max-width: 340px; padding: 8px 0;">
+      <ul class="nav nav-list">
+        <li class="nav-header">Categories</li>
+        <% Category.all.each do |category| %>
+          <li><a href="#"><%= category.name %></a></li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 
   <div class="span9">
-
 
     <%# figure out how to allign row-fluid for 4 items across each row %>
     <div class='row'>
@@ -27,18 +28,6 @@
           </div>
         <% end %>
       <% end %>
-
-      <!--<div class="pagination">
-        <ul>
-          <li><a href="#">Prev</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
-          <li><a href="#">Next</a></li>
-        </ul>
-      </div>-->
 
     </div>
   </div>
