--- a/store/app/views/layouts/application.html.erb
+++ b/store/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
       {
         position:relative;
         float:right;
-        top:-60px;
+        top:-45px;
+        left:-0%;
       }
     </style>
   </head>
@@ -53,6 +54,7 @@
     
     <div class="container">
 
+
       <% if notice %>
         <div class="alert">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -61,6 +63,11 @@
       <% end %>
 
       <%= yield %>
+
+
+
+
+
     </div> <!-- close container -->
   </body>
 </html>
