Moved address information to customers table. Removed addresses table. Created separate a seperate users controller   for modifying the logged in user's customer information. Password is not yet modifiable by the customer or admin

--- a/store/app/views/layouts/application.html.erb
+++ b/store/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
               <li><%= link_to "Cart" %></li>
               <% if user_signed_in? %>
                 <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
-                <li class="emailDiv"><%= link_to current_user.email %></li>
+                <li class="emailDiv"><%= link_to current_user.email, users_path + "/" + current_user.id.to_s %></li>
               <% else %>
                 <li><%= link_to "Sign in", new_user_session_path %></li>
               <% end %>
