--- a/store/app/views/customers/index.html.erb
+++ b/store/app/views/customers/index.html.erb
@@ -8,10 +8,8 @@
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:fname) %></th>
       <th><%= model_class.human_attribute_name(:lname) %></th>
-      <th><%= model_class.human_attribute_name(:username) %></th>
-      <th><%= model_class.human_attribute_name(:password) %></th>
       <th><%= model_class.human_attribute_name(:phone) %></th>
-      <th><%= model_class.human_attribute_name(:address_id) %></th>
+      <th><%= model_class.human_attribute_name(:address) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -22,10 +20,8 @@
         <td><%= link_to customer.id, customer_path(customer) %></td>
         <td><%= customer.fname %></td>
         <td><%= customer.lname %></td>
-        <td><%= customer.username %></td>
-        <td>**********</td>
         <td><%= number_to_phone(customer.phone, :area_code => true) %></td>
-        <td><%= link_to Address.find_by_id(customer.address_id).line1, :controller => "addresses", :action => "show", :id => customer.address_id %> ...</td>
+        <td><%= customer.address.lines.first %></td>
         <td><%=l customer.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
