--- a/store/app/views/users/_form.html.erb
+++ b/store/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @customer, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for @customer, :url => user_path, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :fname, :class => 'control-label' %>
     <div class="controls">
@@ -25,7 +25,5 @@
   </div>
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-      customers_path, :class => 'btn' %>
     </div>
   <% end %>
