--- a/store/app/views/users/show.html.erb
+++ b/store/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
   <dt><strong><%= model_class.human_attribute_name(:lname) %>:</strong></dt>
   <dd><%= @customer.lname %></dd>
   <dt><strong><%= model_class.human_attribute_name(:phone) %>:</strong></dt>
-  <dd><%= @customer.phone %></dd>
+  <dd><%= number_to_phone(@customer.phone, :area_code => true) %></dd>
   <dt><strong><%= model_class.human_attribute_name(:address) %>:</strong></dt>
   <dd><%= @customer.address %></dd>
 </dl>
