Cleaned up logo (it is now an svg)

--- a/store/app/views/home/index.html.erb
+++ b/store/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="hero-unit">
-  <%= image_tag("logo.png", :size => "200x200", :alt => "C.C. Logo", :class => 'logo-right') %>
+  <%= image_tag("CCLogo.svg", :size => "200x200", :alt => "C.C. Logo", :class => 'logo-right') %>
   <h1>Welcome</h1>
   <p>C.C. offers yadayada yada and welcomes you to our site.  Buy something!</p>
 </div>
