--- a/store/app/views/admins/index.html.erb
+++ b/store/app/views/admins/index.html.erb
@@ -2,4 +2,4 @@
 
 <p><%= link_to "Products", products_path %></p>
 <p><%= link_to "Categories", categories_path %></p>
-<p><%= link_to "Customers", customers_path %></p>
+<p><%= link_to "Users", users_path %></p>
