--- a/store/app/views/products/show.html.erb
+++ b/store/app/views/products/show.html.erb
@@ -8,8 +8,12 @@
   <dd><%= @product.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
   <dd><%= @product.price %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+  <dd><%= @product.description %></dd>
   <dt><strong><%= model_class.human_attribute_name(:instock) %>:</strong></dt>
   <dd><%= @product.instock %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:category_id) %>:</strong></dt>
+  <dd><%= @product.category_id %></dd>
 </dl>
 
 <div class="form-actions">
