--- a/store/app/views/orders/_form.html.erb
+++ b/store/app/views/orders/_form.html.erb
@@ -1,37 +1,37 @@
-<%= form_for(@order) do |f| %>
-  <% if @order.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
-
-      <ul>
-      <% @order.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @order, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :user, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.collection_select :user_id, User.all, :id, :fname, {} %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
   </div>
-  <div class="field">
-    <%= f.label :product_id %><br />
-    <%= f.number_field :product_id %>
+  <div class="control-group">
+    <%= f.label :product, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.collection_select :product_id, Product.all, :id, :name, {} %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :required_date %><br />
-    <%= f.datetime_select :required_date %>
+  <div class="control-group">
+    <%= f.label :required_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :required_date %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :shipped_date %><br />
-    <%= f.datetime_select :shipped_date %>
+  <div class="control-group">
+    <%= f.label :shipped_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :shipped_date %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :in_cart %><br />
-    <%= f.check_box :in_cart %>
+  <div class="control-group">
+    <%= f.label :in_cart, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :in_cart, :class => 'checkbox' %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+          orders_path, :class => 'btn' %>
   </div>
 <% end %>
