--- a/store/app/views/orders/show.html.erb
+++ b/store/app/views/orders/show.html.erb
@@ -1,30 +1,28 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Order -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>User:</b>
-  <%= @order.user_id %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:user) %>:</strong></dt>
+  <dd><%= @order.user_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product) %>:</strong></dt>
+  <dd><%= @order.product_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:required_date) %>:</strong></dt>
+  <dd><%= @order.required_date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:shipped_date) %>:</strong></dt>
+  <dd><%= @order.shipped_date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:in_cart) %>:</strong></dt>
+  <dd><%= @order.in_cart %></dd>
+</dl>
 
-<p>
-  <b>Product:</b>
-  <%= @order.product_id %>
-</p>
-
-<p>
-  <b>Required date:</b>
-  <%= @order.required_date %>
-</p>
-
-<p>
-  <b>Shipped date:</b>
-  <%= @order.shipped_date %>
-</p>
-
-<p>
-  <b>In cart:</b>
-  <%= @order.in_cart %>
-</p>
-
-
-<%= link_to 'Edit', edit_order_path(@order) %> |
-<%= link_to 'Back', orders_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              orders_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_order_path(@order), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              order_path(@order),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
