--- a/store/app/views/users/_form.html.erb
+++ b/store/app/views/users/_form.html.erb
@@ -25,7 +25,12 @@
   </div>
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-      users_path + "/" + current_user.id.to_s, :class => 'btn' %>
+    <% if user_signed_in? %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+        users_path + "/" + current_user.id.to_s, :class => 'btn' %>
+    <% else %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+        users_path, :class => 'btn' %>
+    <% end %>
     </div>
   <% end %>
