--- a/store/app/views/users/show.html.erb
+++ b/store/app/views/users/show.html.erb
@@ -15,6 +15,17 @@
 </dl>
 
 <div class="form-actions">
+  <% if !user_signed_in? %>
+    <%= link_to t('.back', :default => t("helpers.links.back")),
+                users_path, :class => 'btn'  %>
+  <% end %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_user_path(@user), :class => 'btn' %>
+    edit_user_path(@user), :class => 'btn' %>
+  <% if !user_signed_in? %>
+      <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                user_path(@user),
+                :method => 'delete',
+                :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                :class => 'btn btn-danger' %>
+  <% end %>
 </div>
