--- a/store/app/views/admins/index.html.erb
+++ b/store/app/views/admins/index.html.erb
@@ -3,3 +3,5 @@
 <p><%= link_to "Products", products_path %></p>
 <p><%= link_to "Categories", categories_path %></p>
 <p><%= link_to "Users", users_path %></p>
+<p><%= link_to "Carts", carts_path %></p>
+<p><%= link_to "Orders", orders_path %></p>
